Revise index.html for structure and accessibility
Updated the HTML structure and added alt text for the image.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 
         <div class="hero-img">
-            <img src="washing.jpeg" alt="">
+            <img src="washing.jpeg" alt="Washing Machine image">
         </div>
     </section>
 </body>
+
 </html>
